Fix typo in hyperlink URL

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     Tech: HTML5, CSS3, JavaScript, jQuery, Bootstrap 5
   </p>
   <p>
-    <a href="hhttps://mancykokms.github.io/sort_table.html">
+    <a href="https://mancykokms.github.io/sort_table.html">
       View on GitHub →
     </a>
   </p>
